<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Login">Login</string>
    <string name="hintTextLogin">Login name</string>
    <string name="password">Password</string>
    <string name="switchText">What does this do?</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="LogInButton">Log In</string>
    <string name="SwitchOn">Switch is On</string>
    <string name="SwitchOff">Switch is Off</string>
    <string name="dialog_message">Do you want to finish this acitivity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="Yes">Yes</string>
    <string name="Cancel">Cancel</string>
    <string name="StartChatButton"> Start Chat </string>
    <string name="sendButton">Send</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="testToolbar">Test Toolbar</string>
    <string name="version"> Version 1.0, by Arshia Mathur</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="title">Do you want to go back?</string>

</resources>