<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ListItemsActivity"
    android:rowCount="2"
    android:columnCount="2">

    <RadioButton
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/RadioButton"/>

    <CheckBox android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/CheckBox"/>

    <Switch android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/switchText"/>

    <ImageButton
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:src="@android:drawable/ic_menu_camera" />



</GridLayout>